--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
           <p class="lead">This is larger test to pull readers into your data story with a compelling introduction. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
 
           <p> A For a lot of children, schools aren't just places for learning. They are community spaces where children spend majority of their time and life where they go to access support for their physical, mental, and environmental health and well being. School-Based Health Centers (SBHCs) play a big role in this support system. They provide students with the access they need for medical, mental health, and sometimes dental services directly in their schools. For some students who face barries to healthcare like lack of insurance, transportation, community support, and flexible work schedules SBHC’s can be life changing for families.  
+            
 Unfortunately, In Connecticut, not every school district or town has a SBHC. This uneven access may reflect broader inequities across communities which raises important questions about equity. Are SBHC’s located in towns that need them most - the towns with higher poverty rates, and larger populations relying on health insurance? Are the only in towns or wealthier areas with fewer barriers to receiving care? 
-Our question asks: how towns with School-Based Health Centers (SBHCs) differ from those without -in terms of median household income and the percentage of residents receiving Medicaid health insurance (also known as “HUSKY” or a “medical benefit plan” from CT Dept of Social Services, DSS). These two indicators show much more about broader economic and healthcare access disparities across Connecticut. If towns lacking SBHCs generally have higher incomes and fewer residents on Medicaid, that could mean that the communities with the greatest need for school-based health services may have the least access to them. 	
+Our question asks: how towns with School-Based Health Centers (SBHCs) differ from those without -in terms of median household income and the percentage of residents receiving Medicaid health insurance (also known as “HUSKY” or a “medical benefit plan” from CT Dept of Social Services, DSS). 
+            These two indicators show much more about broader economic and healthcare access disparities across Connecticut. If towns lacking SBHCs generally have higher incomes and fewer residents on Medicaid, that could mean that the communities with the greatest need for school-based health services may have the least access to them. 	
 </p>
 
           <p>Compose your data story in your Google Doc, where it's easier to write and edit, especially when working with other people. When you're ready, create your own copy of this <a href="https://github.com/DataVizForAll/dataviz-story-template">GitHub dataviz-story-template </a>, and publish it online using Settings > Pages. When your version is published, copy and paste the live web link into your README file so you can easily find it.</p>
@@ -97,14 +99,13 @@ Our question asks: how towns with School-Based Health Centers (SBHCs) differ fro
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 2 Label</h2>
+          <h2>Findings</h2>
 
           <p>TELL your story and SHOW your evidence. When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
 
           <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
 
-          <iframe title="Connecticut created desegregated schools for only 41 percent of Hartford Black &amp;amp; Latino students in 2019-20" aria-label="Interactive area chart" id="datawrapper-chart-fdcm0" src="https://datawrapper.dwcdn.net/fdcm0/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-          </script>
+          <i<iframe title="U.S. States Show Similar Unemployment Rates" aria-label="Choropleth map" id="datawrapper-chart-o6uU9" src="https://datawrapper.dwcdn.net/o6uU9/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="483" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script></script>
 
           <p>EDIT CAPTIONS like this -- Figure 1: Explore the <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> AND ADD your description of the chart here. Make sure your caption includes a direct link to your published chart or map in case the embed code fails to display.</p>
 
