--- a/index.html
+++ b/index.html
@@ -139,11 +139,14 @@ Our question asks: how towns with School-Based Health Centers (SBHCs) differ fro
 
           <p>The City of Hartford recently created a housing code that requires the registration of the full names and contact information for all owners of apartment buildings -- including the officers of Limited Liability Corporations (LLCs) -- in order to "close municipal loopholes that allow anonymous slumlords to operate unchecked" (Lurye).</p>
 
-          <p>In most towns, the percentage of high-needs students enrolled in traditional public schools surpasses those enrolled in magnet, charter, and technical schools in the most recent academic year (“Resident Town Export”).</p>
+          <p>In most towns, the percentage of high-needs students enrolled in traditional public schools surpasses those enrolled in magnet, charter, and technical schools in the most recent academic year (“Enrollment Dashboard”).</p>
 
           <p>...later, insert a bibliography at the end of your data story:</p>
 
           <h4>Works Cited:</h4>
+
+
+ <p>CT State Department of Education . “Enrollment Dashboard.” EdSight , https://public-edsight.ct.gov/students/enrollment-dashboard. Accessed 19 Nov. 2025.</p>
 
           <p>Lurye, Rebecca. “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs.” Hartford Courant, May 31, 2019. <a href='https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html'>https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html</a>.</p>
 
