--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Our question asks: how towns with School-Based Health Centers (SBHCs) differ fro
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 3 Label</h2>
+          <h2>Methods</h2>
 
           <p>Create a separate section to describe how you obtained your data, key steps in your process, and cautions for interpreting its meaning. Write for an audience of future Trinity College students who may wish to replicate your steps. Write in HTML format and always include links to data sources, like this example from <a href='https://data.ct.gov'>CT Open Data</a>. Also link to your shared Google Sheets when appropriate.</p>
 
@@ -168,7 +168,7 @@ Our question asks: how towns with School-Based Health Centers (SBHCs) differ fro
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 4 Label: Advanced Tips</h2>
+          <h2>EDIT Section 4 Label: Conclusion</h2>
 
           <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can prepare a JPG or PNG file (preferably with all lower-case text and no spaces in the filename) and upload it directly into your GitHub repo, as shown below:</p>
 
