--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Practice Data Sotry</h1>
+      <h1>Where Are School-Based Health Centers — and Who’s Missing Out?</h1>
       <p class="lead">by Ava Gosnell </p>
       <p class="lead">Last updated on November 19th, 2025</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
