--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <a class="nav-link js-scroll-trigger" href="#section1">Introduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section2">EDIT Section 2</a>
+            <a class="nav-link js-scroll-trigger" href="#section2">Findings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section3">EDIT Section 3</a>
+            <a class="nav-link js-scroll-trigger" href="#section3">Methods</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section4">EDIT Section 4</a>
+            <a class="nav-link js-scroll-trigger" href="#section4">Conclusion</a>
           </li>
         </ul>
       </div>
@@ -167,7 +167,7 @@ Our question asks: how towns with School-Based Health Centers (SBHCs) differ fro
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 4 Label: Conclusion</h2>
+          <h2>Conclusion</h2>
 
           <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can prepare a JPG or PNG file (preferably with all lower-case text and no spaces in the filename) and upload it directly into your GitHub repo, as shown below:</p>
 
